# rearwing

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  CHANGELOG.md  Dockerfile.dev  Dockerfile.prod  Dockerfile.staging  Procfile  README.md  compose.dev.yaml  constants.py  main.py  poetry.toml  process.config.js  pyproject.toml  requirements.txt  run.py  run_tests.py  useful_commands.md  utils.py
.github/: FUNDING.yml
.github/workflows/: bumpversion.yml  ci.yml  codeql.yml  tests.yml
Docker/: Dockerfile.dev  Dockerfile.staging
app/: __init__.py  constants.py  main.py  models.py  test_main.py  utils.py
docker/: compose.dev.yaml  supabase-selfhost.yaml
notebooks/: playground.ipynb  pratik-playground.ipynb
tests/: __init__.py  test_healthcheck.py  test_laps.py  test_next_event.py  test_results.py  test_root.py  test_schedule.py  test_split_qualifying_laps.py  test_standings.py  test_telemetry.py  test_utils.py
tests/__snapshots__/: test_laps.ambr  test_next_event.ambr  test_results.ambr  test_root.ambr  test_schedule.ambr  test_split_qualifying_laps.ambr  test_standings.ambr  test_telemetry.ambr
