[tool.poetry]
name = "backend"
version = "0.2.0"
description = "Slick Telemetry backend written in python"
authors = ["Slick Telemetry <contact.@slicktelemetry.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
fastf1 = "^3.2.2"
fastapi-utils = "^0.2.1"
uvicorn = { extras = ["standard"], version = "^0.27.1" }

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
commitizen = "^3.14.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.commitizen]
version = "0.2.0"
version_files = [
    "app/__init__.py:__version__",
    "pyproject.toml:version",
    "VERSION",
]
update_changelog_on_bump = true
major_version_zero = true
